# CandidateFusionai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  app.py  routes.py
confidence/: __init__.py  engine.py
config/: __init__.py  default.json  minimal.json  settings.py
extractors/: __init__.py  ats_json.py  base.py  csv_extractor.py  factory.py  github_extractor.py  notes_extractor.py  pdf_extractor.py
inputs/: ats.json  notes.txt  recruiter.csv
mergers/: __init__.py  merge_engine.py
models/: __init__.py  candidate.py  confidence.py  extracted.py  metadata.py  provenance.py
normalizers/: __init__.py  date_normalizer.py  email_normalizer.py  location_normalizer.py  phone_normalizer.py  skill_normalizer.py  text_normalizer.py  url_normalizer.py
projection/: __init__.py  projector.py
scripts/: run_pipeline.sh  setup.sh
services/: __init__.py  canonical_mapper.py  pipeline.py
tests/: __init__.py  conftest.py
tests/integration/: test_github_extractor.py  test_pipeline.py
tests/unit/: test_canonical_mapper.py  test_confidence.py  test_extractors.py  test_merge_engine.py  test_normalizers.py  test_projector.py  test_validators.py
ui/: index.html
utils/: __init__.py  logging.py  retry.py  timer.py
validators/: __init__.py  validation_engine.py
