[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "candidate-fusion"
version = "1.0.0"
description = "Multi-Source Candidate Data Transformer — Production-grade data transformation pipeline"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eightfold AI Engineering", email = "engineering@eightfold.ai" }]
requires-python = ">=3.12"
keywords = ["candidate", "data-transformation", "pipeline", "hr-tech", "ai", "eightfold"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "typer[all]>=0.13.1",
    "pydantic[email]>=2.10.3",
    "pydantic-settings>=2.6.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "PyMuPDF>=1.25.1",
    "pdfplumber>=0.11.4",
    "rapidfuzz>=3.10.1",
    "phonenumbers>=8.13.51",
    "email-validator>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "orjson>=3.10.12",
    "structlog>=24.4.0",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
    "faker>=32.1.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0.20241016",
    "pandas-stubs>=2.2.3.241009",
    "ruff>=0.8.4",
    "black>=24.10.0",
    "coverage[toml]>=7.6.9",
]

[project.scripts]
candidate-fusion = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "models*",
    "extractors*",
    "normalizers*",
    "mergers*",
    "validators*",
    "projection*",
    "confidence*",
    "provenance*",
    "utils*",
    "services*",
    "api*",
    "config*",
]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "S",   # bandit
    "PTH", # use pathlib
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "S101",   # Use of assert (needed in tests)
    "B008",   # Do not perform function calls in default arguments (FastAPI dependency injection)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["models", "extractors", "normalizers", "mergers", "validators", "projection", "confidence", "provenance", "utils", "services", "api"]

# ─── Black ───────────────────────────────────────────────────────────────────
[tool.black]
target-version = ["py312"]
line-length = 100
include = '\.pyi?$'

# ─── MyPy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "fitz.*",
    "phonenumbers.*",
    "rapidfuzz.*",
    "structlog.*",
]
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: Unit tests (no external I/O)",
    "integration: Integration tests (may hit filesystem or network mocks)",
    "slow: Tests that take longer than 2 seconds",
]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "scripts/*",
    ".venv/*",
    "*/migrations/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 85
show_missing = true
